Add Keycloak security provider, fix class not found error when saving Keycloak role service

--- a/src/community/security/keycloak/src/main/resources/GeoServerApplication.properties
+++ b/src/community/security/keycloak/src/main/resources/GeoServerApplication.properties
@@ -14,3 +14,12 @@ KeycloakAuthFilterPanel.description=Authentication using Keycloak OAuth2 OpenID 
 KeycloakAuthFilterPanel.adapterConfig=Adapter Config
 KeycloakAuthFilterPanel.adapterConfigHelp.title=Adapter Config
 KeycloakAuthFilterPanel.adapterConfigHelp=Configuration for the Keycloak Java adapter. You should obtain this as a JSON document from the Keycloak server "Installation" tab. For details see the relevant <a href="http://www.keycloak.org/docs/3.0/securing_apps/topics/oidc/java/java-adapter-config.html">Keycloak documentation</a>.
+
+# user/group/role page
+KeycloakRoleServicePanel.short=Keycloak
+KeycloakRoleServicePanel.title=Keycloak Role Service
+KeycloakRoleServicePanel.description=Role service from Keycloak
+
+# role services
+org.geoserver.security.impl.GeoServerKeycloakRoleService.name=Keycloak
+org.geoserver.security.impl.GeoServerKeycloakRoleService.title=Keycloak role service
