--- a/src/community/security/keycloak/src/main/resources/GeoServerApplication.properties
+++ b/src/community/security/keycloak/src/main/resources/GeoServerApplication.properties
@@ -19,7 +19,11 @@ KeycloakAuthFilterPanel.adapterConfigHelp=Configuration for the Keycloak Java ad
 KeycloakRoleServicePanel.short=Keycloak
 KeycloakRoleServicePanel.title=Keycloak Role Service
 KeycloakRoleServicePanel.description=Role service from Keycloak
+KeycloakRoleServicePanel.settings=Keycloak Connection Settings
+KeycloakRoleServicePanel.serverURL=URL
+KeycloakRoleServicePanel.idOfClient=ID of client (not client-id)
+KeycloakRoleServicePanel.clientSecret=Client secret
 
 # role services
-org.geoserver.security.impl.GeoServerKeycloakRoleService.name=Keycloak
-org.geoserver.security.impl.GeoServerKeycloakRoleService.title=Keycloak role service
+org.geoserver.security.impl.KeycloakRoleService.name=Keycloak
+org.geoserver.security.impl.KeycloakRoleService.title=Keycloak role service
