Add role retrieval from config values and error handling

--- a/src/community/security/keycloak/src/main/resources/GeoServerApplication.properties
+++ b/src/community/security/keycloak/src/main/resources/GeoServerApplication.properties
@@ -19,8 +19,10 @@ KeycloakAuthFilterPanel.adapterConfigHelp=Configuration for the Keycloak Java ad
 KeycloakRoleServicePanel.short=Keycloak
 KeycloakRoleServicePanel.title=Keycloak Role Service
 KeycloakRoleServicePanel.description=Role service from Keycloak
-KeycloakRoleServicePanel.settings=Keycloak Connection Settings
-KeycloakRoleServicePanel.serverURL=URL
+KeycloakRoleServicePanel.keycloakSettings=Keycloak Connection Settings
+KeycloakRoleServicePanel.serverURL=Base URL for Keycloak
+KeycloakRoleServicePanel.realm=Realm name (not id)
+KeycloakRoleServicePanel.clientID=Client ID
 KeycloakRoleServicePanel.idOfClient=ID of client (not client-id)
 KeycloakRoleServicePanel.clientSecret=Client secret
 
