Move Keycloak role service into existing Keycloak extension

--- a/src/community/security/keycloak/src/main/resources/GeoServerApplication.properties
+++ b/src/community/security/keycloak/src/main/resources/GeoServerApplication.properties
@@ -27,5 +27,5 @@ KeycloakRoleServicePanel.idOfClient=ID of client (not client-id)
 KeycloakRoleServicePanel.clientSecret=Client secret
 
 # role services
-org.geoserver.security.impl.KeycloakRoleService.name=Keycloak
-org.geoserver.security.impl.KeycloakRoleService.title=Keycloak role service
+org.geoserver.security.keycloak.KeycloakRoleService.name=Keycloak
+org.geoserver.security.keycloak.KeycloakRoleService.title=Keycloak role service
